# tracing-systemd

./: Cargo.toml  LICENSE  README.md
examples/: test_log_stdout.rs
src/: formatting.rs  lib.rs  systemd_layer.rs
src/systemd_layer/: helper_structs.rs  impls.rs
